5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4139/executions/1593_820.log
== TEST (2019-03-28 10:20:55) 
-- CODE:
vr = int(input("valor do saque:"))

a=vr//100
b=vr%10
c=b%10
d=1
e=1

print(int(a))
print(int(b))
print(int(c))

-- OUTPUT:
20
8
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:22:30) 
-- CODE:
vr = int(input("valor do saque:"))

a=vr//100
b=vr//10
c=vr%10
d=1
e=1

print(int(a))
print(int(b))
print(int(c))

-- OUTPUT:
20
202
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:23:08) 
-- CODE:
vr = int(input("valor do saque:"))

a=vr//100
b=vr//10
c=vr%10
d=b%10
e=1

print(int(a))
print(int(d))
print(int(c))

-- OUTPUT:
20
2
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:28:27) 
-- CODE:
vr = int(input("valor do saque:"))

a=vr//100
b=vr//10
c=vr%10
d=b%10
e=1

x=a*2
y=*1
z=/2

print(int(x))
print(int(y))
print(int(z))

-- ERROR:
File "XXXX", line 11
    z=/2
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:29:00) 
-- CODE:
vr = int(input("valor do saque:"))

a=vr//100
b=vr//10
c=vr%10
d=b%10
e=1

x=a*2
y=d*1
z=c/2

print(int(x))
print(int(y))
print(int(z))

-- OUTPUT:
40
2
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:29:34) 
-- CODE:
vr = int(input("valor do saque:"))

a=vr//100
b=vr//10
c=vr%10
d=b%10
e=1

x=a*2
y=d*1
z=c/2

print(int(x))
print(int(y))
print(int(z))

-- OUTPUT:
40
2
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 10:29:52) 
-- CODE:
vr = int(input("valor do saque:"))

a=vr//100
b=vr//10
c=vr%10
d=b%10
e=1

x=a*2
y=d*1
z=c/2

print(int(x))
print(int(y))
print(int(z))

-- EXECUTION TIME:
0.188969
-- TEST CASE 1:
---- input:
2028
---- correct output:
40
2
4
---- user output:
40
2
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 11:19:06) 
-- CODE:
vr = int(input("valor do saque:"))

a=vr//100
b=vr//10
c=vr%10
d=b%10
e=1

x=a*2
y=d*1
z=c/2

print(int(x))
print(int(y))
print(int(z))

-- EXECUTION TIME:
0.170323
-- TEST CASE 1:
---- input:
2028
---- correct output:
40
2
4
---- user output:
40
2
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:20:22) 
-- CODE:
vr = int(input("valor do saque:"))

a=vr//100
b=vr//10
c=vr%10
d=b%10
e=1

x=a*2
y=d*1
z=c/2

print(int(x))
print(int(y))
print(int(z))

-- OUTPUT:
40
2
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 22:35:13) 
-- CODE:
vr = int(input("valor do saque:"))

a=vr//100
b=vr//10
c=vr%10
d=b%10
e=1

x=a*2
y=d*1
z=c/2

print(int(x))
print(int(y))
print(int(z))

-- EXECUTION TIME:
0.149432
-- TEST CASE 1:
---- input:
2028
---- correct output:
40
2
4
---- user output:
40
2
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
